--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
+        <li><a href="#testport"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
@@ -406,70 +406,74 @@
     </section>
     <!-- /Resume Section -->
 
-    <!-- Portfolio Section -->
-    <section id="services" class="services section">
+    <!-- /Portfolio Section -->
 
-      <!-- Section Title -->
+    <section id="testport" class="testport">
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Need a brand that stops scrollers dead, a website that converts like crazy, or digital art that sparks awe? <br> I’ve got you. With expertise in graphic design, web development, and digital artistry, I deliver tailored solutions that don’t just meet goal, they shatter them.</p>
+        <h2>Portfolio</h2>
+        <p>This portfolio highlights a selection of projects where strategy, creativity, and execution come together. Each piece reflects my approach to solving problems through thoughtful design, purposeful storytelling, and results-driven visuals.</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <div class="container" id="Portcontainer">
 
-        <div class="row gy-4">
+        <div class="row gy-4" id="testport">
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item item-cyan position-relative">
-              <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
-                </svg>
-                <i class="bi bi-vector-pen"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>DESIGN SERVICES</h3>
-              </a>
-              <p>Graphic Design | Branding | Social media Design | Logo Design | Flyer Design | Short AD Videos | Youtube thumbnails | Photo manipulation | Document Editing | Invite Card Designs | Business Card Designs and more.</p>
-            </div>
+          <div class="testportbox" data-aos="fade-up" data-aos-delay="100">
+            <p style="text-align: center; place-content: center;">
+              <h3 id="ph3" style="width: 100%; text-align: center; margin-top: 50px; font-family: poppins; font-weight: bold;">
+                GRAPHIC DESIGN <br> PORTFOLIO
+              </h3>
+            </p>
+            <a href="portfolio-details.html" id= "linkbtn">
+              <button id="Seefullport">
+                <p style="font-weight: bold; font-size: 12px; margin: 4px;">SEE MORE</p>
+              </button>
+            </a> 
+
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item item-orange position-relative">
-              <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,582.0697525312426C382.5290701553225,586.8405444964366,449.9789794690241,525.3245884688669,502.5850820975895,461.55621195738473C556.606425686781,396.0723002908107,615.8543463187945,314.28637112970534,586.6730223649479,234.56875336149918C558.9533121215079,158.8439757836574,454.9685369536778,164.00468322053177,381.49747125262974,130.76875717737553C312.15926192815925,99.40240125094834,248.97055460311594,18.661163978235184,179.8680185752513,50.54337015887873C110.5421016452524,82.52863877960104,119.82277516462835,180.83849132639028,109.12597500060166,256.43424936330496C100.08760227029461,320.3096726198365,92.17705696193138,384.0621239912766,124.79988738764834,439.7174275375508C164.83382741302287,508.01625554203684,220.96474134820875,577.5009287672846,300,582.0697525312426"></path>
-                </svg>
-                <i class="bi bi-laptop"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>WEB DEVELOPMENT</h3>
-              </a>
-              <p>Front-end Web Development | Portfolio Setup | Vanilla (HTML,CSS) Tutoring and more.</p>
-            </div>
+          <div class="testportbox" data-aos="fade-up" data-aos-delay="100">
+            <p style="text-align: center; place-content: center;">
+              <h3 style="width: 100%; text-align: center; margin-top: 50px; font-family: poppins; font-weight: bold;">
+                WEB DESIGN <br> PORTFOLIO
+              </h3>
+            </p> 
+            <a href="#" id= "linkbtn">
+              <button id="Seefullport">
+                <p style="font-weight: bold; font-size: 12px; margin: 4px;">SEE MORE</p>
+              </button>
+            </a>
+          </div><!-- End Service Item -->
+          
+          <div class="testportbox" data-aos="fade-up" data-aos-delay="100">
+            <p style="text-align: center; place-content: center;">
+              <h3 style="width: 100%; text-align: center; margin-top: 50px; font-family: poppins; font-weight: bold;">
+                BRAND IDENTITY <br> PORTFOLIO
+              </h3>
+            </p> 
+            <a href="portfolio-details.html" id= "linkbtn">
+              <button id="Seefullport">
+              <p style="font-weight: bold; font-size: 12px; margin: 4px;">SEE MORE</p>
+              </button>
+            </a>
+            
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item item-teal position-relative">
-              <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"></path>
-                </svg>
-                <i class="bi bi-palette"></i>
-              </div>
-              <a href="#" class="stretched-link">
-                <h3>DIGITAL ARTS (Dackarts)</h3>
-              </a>
-              <p> NFT creation | 2D Animated Videos | Digital images | Music (Animated) cover | Animated Visual Story telling | Comic Book creation | 3D Animated videos & 3D Modelling (In view)</p>
-            </div>
+          <div class="testportbox" data-aos="fade-up" data-aos-delay="100">
+            <p style="text-align: center; place-content: center;">
+              <h3 style="width: 100%; text-align: center; margin-top: 50px; font-family: poppins; font-weight: bold;">
+                VIDEO EDITING <br> PORTFOLIO
+              </h3>
+            </p> 
+            <a href="https://drive.google.com/drive/folders/1YRPeCDD8YdZ0wcjb6l6h8Pihd_ECXG-E?usp=drive_link"  id= "linkbtn">
+              <button id="Seefullport">
+                <p style="font-weight: bold; font-size: 12px; margin: 4px;">SEE MORE</p>
+              </button>
+            </a>
           </div><!-- End Service Item -->
-
         </div>
-
       </div>
-
     </section>
-    <!-- /Portfolio Section -->
 
     <!-- Services Section -->
     <section id="services" class="services section">
