--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        <span>Victor John is a visionary whose breathtaking design, web mastery, and digital artistry transformed our portfolio into a work of pure brilliance. Their thoughtful genius and unwavering dedication didn’t just capture our essence, they elevated it beyond our wildest dreams. We stand in awe of their talent and feel privileged to have witnessed their magic firsthand!
+                        <span>Edikan Bassey is a visionary whose breathtaking design, web mastery, and digital artistry transformed our portfolio into a work of pure brilliance. Their thoughtful genius and unwavering dedication didn’t just capture our essence, they elevated it beyond our wildest dreams. We stand in awe of their talent and feel privileged to have witnessed their magic firsthand!
                         </span>
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
@@ -601,7 +601,7 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        <span>Victor John(victorgpx) is a wonderful creative whose creativity hit us like a storm, making our brand unforgettable. He puts his heart and focus into every piece, turning our ideas into something way bigger than we dreamed. His skills and talent shook us up and left us wanting more!, and I'll highly recommend him to anyone and any brand.
+                        <span>Edikan Bassey(victorgpx) is a wonderful creative whose creativity hit us like a storm, making our brand unforgettable. He puts his heart and focus into every piece, turning our ideas into something way bigger than we dreamed. His skills and talent shook us up and left us wanting more!, and I'll highly recommend him to anyone and any brand.
                         </span>
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
@@ -626,19 +626,19 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        <span>GPX(GRAPHICS) turned my vision into reality with stunning creativity, I speak inline with his Design skills. His thoughtful work made my entreprise shine brighter than I ever imagined. This young man didn’t just deliver, He inspired me to aim higher and for that I call him a Pro.
+                        <span><victor class="gpx"></victor> turned my vision into reality with stunning creativity, I speak inline with his Design skills. His thoughtful work made my entreprise shine brighter than I ever imagined. This young man didn’t just deliver, He inspired me to aim higher and for that I call him a Pro.
                         </span>
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
-                      <h3>Jena Karlis</h3>
-                      <h4>Entrepreneur</h4>
+                      <h3>Beauty Iheke</h3>
+                      <h4>Entrepreneur, CEO. QB's Pastries</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/testimonials/testimonials-3.jpg" class="img-fluid testimonial-img" alt="">
+                    <img src="assets/img/testimonials/testimonials-3.png" class="img-fluid testimonial-img" alt="">
                   </div>
                 </div>
               </div>
