--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 GRAPHIC DESIGN <br> PORTFOLIO
               </h3>
             </p>
-            <a href="portfolio-details.html" id= "linkbtn">
+            <a href="https://drive.google.com/drive/folders/1jqCTmyPK-ZrJKqwZ9W9dnWN6UKROgBIR?usp=drive_link" id= "linkbtn">
               <button id="Seefullport">
                 <p style="font-weight: bold; font-size: 12px; margin: 4px;">SEE MORE</p>
               </button>
@@ -626,7 +626,7 @@
                     <div class="testimonial-content">
                       <p>
                         <i class="bi bi-quote quote-icon-left"></i>
-                        <span><victor class="gpx"></victor> turned my vision into reality with stunning creativity, I speak inline with his Design skills. His thoughtful work made my entreprise shine brighter than I ever imagined. This young man didn’t just deliver, He inspired me to aim higher and for that I call him a Pro.
+                        <span><victor class="gpx"></victor> Edikan really turned my vision into reality with stunning creativity, I speak in line with his Design skills. His thoughtful work made my entreprise shine brighter than I ever imagined. He didn’t just deliver, He inspired me to aim higher and for that I call him a Pro.
                         </span>
                         <i class="bi bi-quote quote-icon-right"></i>
                       </p>
